# crt1d

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  environment-dev.yml  leaf_rad_common_v2.py  pyproject.toml  readthedocs.yml  setup.cfg  setup.py  test_lrc_v2.py  test_model_schemes.py
.github/workflows/: ci.yml  docs-examples.yml
crt1d/: __init__.py  cases.py  crt1d.py  diagnostics.py  leaf_angle.py  leaf_angle_dist.py  leaf_area.py  leaf_area_alloc.py  model.py  solvers.py  spectra.py  utils.py  variables.py  variables.yml
crt1d/data/: PROSPECT_sample.txt  SPCTRAL2_xls_default-spectrum.csv  __init__.py  _external.py  default_canopy_descrip.csv  external.py  ideal-green-leaf_SPCTRAL2-wavelengths.csv  sample_pyspctral2.csv
crt1d/data/ideal-green-leaf/: leaf-idealized-rad_SPCTRAL2_wavelengths_extended.csv
crt1d/external_solvers/: README.md
crt1d/solvers/: README.md  __init__.py  _solve_2s.py  _solve_4s.py  _solve_bf.py  _solve_bl.py  _solve_g77.py  _solve_gd.py  _solve_n79.py  _solve_zq.py  _solve_zq_pa.py  bf.py  bl.py  common.py  fours.py  gd.py  solve_2s.py  solve_bf.py  solve_bl.py  solve_gd.py  solve_zq.py  twos_ds.py  variables.yml  zq.py
docs/: api.rst  conf.py  crt1d-refs.bib  examples.rst  index.rst  requirements.txt  solvers.md  variables.md
docs/_static/css/: custom.css
docs/examples/: binning.md  binning.py  external-spectra.md  leaf-angle.md  run-all-schemes.md  test_imports.md  test_imports.py  test_schemes_plot.md  test_schemes_plot.py
examples/: test_imports.ipynb  test_schemes_plot.ipynb
tests/: test_n79.py  test_spectra.py
