[metadata]
name = crt1d
url = https://github.com/zmoon/crt1d
author = Zachary Moon
author_email = zlm1@psu.edu
classifiers =
  Programming Language :: Python :: 3
license = MIT
description = 1-D radiative transfer schemes for modeling light in forest canopies
long_description = file: README.md

[options]
python_requires = >= 3.6, < 4
install_requires =
  matplotlib
  numpy
  pandas
  pyyaml
  scipy
  xarray
packages = find:

[options.extras_require]
data =
  prosail  # run PROSPECT to get more leaf spectra; has numba as a dep
  SolarUtils  # run SPCTRAL2 to get more solar spectra
docs =
  %(data)s
  sphinx
  sphinx-book-theme
  sphinx-autoapi
  sphinxcontrib-bibtex
  myst-nb
