[metadata]
name = crt1d
url = https://github.com/zmoon/crt1d
author = Zachary Moon
author_email = zlm1@psu.edu
classifiers =
  Programming Language :: Python :: 3
license = MIT
description = 1-D radiative transfer schemes for modeling light in forest canopies
long_description = file: README.md

[options]
python_requires = >= 3.6, < 4
install_requires =
  matplotlib
  numpy
  pandas
  pyyaml
  scipy
  xarray
packages = find:

[options.extras_require]
data =
  prosail  # run PROSPECT to get more leaf spectra; has numba as a dep
  SolarUtils  # run SPCTRAL2 to get more solar spectra
docs =
  %(data)s
  furo
  myst-nb
  sphinx
  sphinx-autoapi
  sphinxcontrib-bibtex >= 2.2.0  # `cite:p` and `cite:t` roles

[flake8]
max-line-length = 100
ignore =
  E203 # whitespace before ':' - doesn't work well with black
  E402 # module level import not at top of file
  E501 # line too long - let black worry about that
  W503 # line break before binary operator
  E226 # missing whitespace around arithmetic operator - not always more readable imho
exclude =
  .eggs
  .ipynb_checkpoints

per-file-ignores =
  # Solvers with hand formatting of parens and such
  crt1d/solvers/_solve_2s.py,_solve_zq.py,_solve_n79.py:E201,E202,E221,E222,E231
